// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserForm snapshot test - basic props 1`] = `
<Connect(Form(UserForm))
  destroyOnUnmount={true}
  enableEdit={false}
  enableReinitialize={true}
  forceUnregisterOnUnmount={false}
  form="editUser"
  getFormState={[Function]}
  goTo={[MockFunction]}
  handleSubmit={[MockFunction]}
  keepDirtyOnReinitialize={false}
  onSubmitFail={[Function]}
  persistentSubmitErrors={false}
  pure={true}
  shouldAsyncValidate={[Function]}
  shouldError={[Function]}
  shouldValidate={[Function]}
  shouldWarn={[Function]}
  title="Some Form"
  touchOnBlur={true}
  touchOnChange={false}
  updateUnregisteredFields={false}
  validate={[Function]}
/>
`;

exports[`UserForm snapshot test - no props 1`] = `
<Connect(Form(UserForm))
  destroyOnUnmount={true}
  enableReinitialize={true}
  forceUnregisterOnUnmount={false}
  form="editUser"
  getFormState={[Function]}
  keepDirtyOnReinitialize={false}
  onSubmitFail={[Function]}
  persistentSubmitErrors={false}
  pure={true}
  shouldAsyncValidate={[Function]}
  shouldError={[Function]}
  shouldValidate={[Function]}
  shouldWarn={[Function]}
  touchOnBlur={true}
  touchOnChange={false}
  updateUnregisteredFields={false}
  validate={[Function]}
/>
`;
